Compiler/tests/semantics/fail/sentencia_simple.java

class A {

    static Objeto2 methodb1(Objeto o1, Objeto o2)
    var Objeto o3, o4;
    var Objeto2 o5;
    var String s1 , s2;
    {
        o5 = new Objeto2();
	(System.printSln("Entre a methodb1!"));

        return o5;
    }

    dynamic int methodi1() {}
}

class Objeto {

    var int n;

    static void main()
    var Objeto objeto2;
    var int m;
    {
	objeto2 = new Objeto();
        (objeto2.methodb1((new Objeto()), new Objeto()).printN());
        (System.printSln("Termine"));
    }

    dynamic int getN() {
        return n;
    }
}

class Objeto2 {

    dynamic boolean printN()
    {
	(System.printIln(10));
	return true;
    }
}
